// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Avatar Picker simple avatar picker 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-2165763448 avatar"
  >
    <div
      className="jsx-2165763448 avatar__button"
    />
    <label
      aria-label="Edit image"
      className="jsx-2165763448 avatar__container"
      htmlFor="avatar"
    >
      <input
        className="jsx-2165763448 file-input"
        id="avatar"
        name="name"
        onChange={[Function]}
        type="file"
      />
      <div
        className="jsx-2165763448 avatar__thumb"
        style={
          Object {
            "backgroundImage": "url(null)",
          }
        }
      >
        <svg
          aria-label="camera"
          className="grommetux-control-icon grommetux-control-icon-camera grommetux-control-icon--responsive"
          height="24px"
          role="img"
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M1,21 L1,7 L6,7 L8,3 L16,3 L18,7 L23,7 L23,21 L1,21 Z M12,18 C14.7614237,18 17,15.7614237 17,13 C17,10.2385763 14.7614237,8 12,8 C9.23857625,8 7,10.2385763 7,13 C7,15.7614237 9.23857625,18 12,18 Z"
            fill="none"
            stroke="#000"
            strokeWidth="2"
          />
        </svg>
      </div>
    </label>
    <div
      className="jsx-2165763448 avatar__button"
    />
    <style>
      .avatar{display:grid;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;grid-template-columns:32px 1fr 32px;grid-gap:12px;width:226px;}
      .avatar__container{cursor:pointer;color:#c1c2cf;}
      .avatar__thumb{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;height:138px;width:138px;border-radius:50%;background-color:#e7e7f0;background-position:center;background-size:cover;}
      .avatar__thumb svg{width:42px;height:42px;fill:#bbbccd;stroke:#bbbccd;}
    </style>
  </div>
</div>
`;

exports[`Storyshots Button simple button 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <button
    className="button"
    onClick={[Function]}
    style={Object {}}
  >
    Hello!
    <style>
      .button{padding:13px 54px;height:52px;background-color:#0c97f9;box-sizing:border-box;cursor:pointer;color:#ffffff;line-height:26px;border-width:1px;border-style:solid;border-color:#0c97f9;border-radius:26px;font-style:normal;font-weight:500;font-size:1rem;text-align:center;text-transform:uppercase;}
      .button--accent{color:#0c97f9;background-color:#ffffff;border-color:#ffffff;}
      .button--danger{color:#ffffff;background-color:#ea6577;border-color:#ea6577;}
      .button--rounded{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;padding:0;border-radius:50%;}
      .button--squared{border-radius:12px;}
      .button--transparent{background-color:transparent;box-shadow:0px 0px 10px rgba(12,151,249,0.15);color:#2A2A30;}
      .button svg{fill:#ffffff;stroke:#ffffff;}
    </style>
    <style />
  </button>
</div>
`;

exports[`Storyshots ButtonGroup RadioButtonGroup default no label 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-3612707381"
  >
    <fieldset
      className="jsx-3612707381"
    >
      <legend
        className="jsx-3612707381"
      >
        default
        :
      </legend>
      <div
        className="jsx-3612707381 radio-button-group"
      >
        <label
          className="jsx-3612707381 button"
          htmlFor="all-default"
        >
          all
          <input
            checked={false}
            className="jsx-3612707381"
            id="all-default"
            name="default"
            onChange={[Function]}
            type="radio"
            value="all"
          />
        </label>
        <label
          className="jsx-3612707381 button"
          htmlFor="mr-default"
        >
          medical records
          <input
            checked={false}
            className="jsx-3612707381"
            id="mr-default"
            name="default"
            onChange={[Function]}
            type="radio"
            value="mr"
          />
        </label>
        <label
          className="jsx-3612707381 button"
          htmlFor="pr-default"
        >
          prescriptions
          <input
            checked={false}
            className="jsx-3612707381"
            id="pr-default"
            name="default"
            onChange={[Function]}
            type="radio"
            value="pr"
          />
        </label>
        <label
          className="jsx-3612707381 button"
          htmlFor="la-default"
        >
          lab analysis
          <input
            checked={false}
            className="jsx-3612707381"
            id="la-default"
            name="default"
            onChange={[Function]}
            type="radio"
            value="la"
          />
        </label>
        <label
          className="jsx-3612707381 button"
          htmlFor="sl-default"
        >
          sick list
          <input
            checked={false}
            className="jsx-3612707381"
            id="sl-default"
            name="default"
            onChange={[Function]}
            type="radio"
            value="sl"
          />
        </label>
        <label
          className="jsx-3612707381 button"
          htmlFor="other-default"
        >
          other
          <input
            checked={false}
            className="jsx-3612707381"
            id="other-default"
            name="default"
            onChange={[Function]}
            type="radio"
            value="other"
          />
        </label>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots ButtonGroup RadioButtonGroup primary+label 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-3612707381"
  >
    <fieldset
      className="jsx-3612707381"
    >
      <legend
        className="jsx-3612707381"
      >
        Gender
        :
      </legend>
      <div
        className="jsx-3612707381 radio-button-group primary"
      >
        <label
          className="jsx-3612707381 button"
          htmlFor="male-gender"
        >
          male
          <input
            checked={false}
            className="jsx-3612707381"
            id="male-gender"
            name="gender"
            onChange={[Function]}
            type="radio"
            value="male"
          />
        </label>
        <label
          className="jsx-3612707381 button"
          htmlFor="female-gender"
        >
          female
          <input
            checked={false}
            className="jsx-3612707381"
            id="female-gender"
            name="gender"
            onChange={[Function]}
            type="radio"
            value="female"
          />
        </label>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots Calendar default 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-3268505078 calendar"
  >
    <div
      className="jsx-1635075834"
    >
      <div
        className="jsx-3089003290 navigation"
      >
        <button
          className="jsx-3089003290 prev"
          onClick={[Function]}
        >
          <svg
            aria-label="previous"
            className="grommetux-control-icon grommetux-control-icon-previous grommetux-control-icon--responsive"
            height="24px"
            role="img"
            version="1.1"
            viewBox="0 0 24 24"
            width="24px"
          >
            <polyline
              fill="none"
              points="7 2 17 12 7 22"
              stroke="#000"
              strokeWidth="2"
              transform="matrix(-1 0 0 1 24 0)"
            />
          </svg>
        </button>
        <div
          className="jsx-3089003290 navigation__month"
        >
          April
          <span
            className="jsx-3089003290"
          >
            ·
          </span>
          2018
        </div>
        <button
          className="jsx-3089003290 next"
          onClick={[Function]}
        >
          <svg
            aria-label="next"
            className="grommetux-control-icon grommetux-control-icon-next grommetux-control-icon--responsive"
            height="24px"
            role="img"
            version="1.1"
            viewBox="0 0 24 24"
            width="24px"
          >
            <polyline
              fill="none"
              points="7 2 17 12 7 22"
              stroke="#000"
              strokeWidth="2"
            />
          </svg>
        </button>
      </div>
      <ul
        className="jsx-1635075834 weekdays"
      >
        <li
          className="jsx-1635075834 weekdays__item"
        >
          Sun
        </li>
        <li
          className="jsx-1635075834 weekdays__item"
        >
          Mon
        </li>
        <li
          className="jsx-1635075834 weekdays__item"
        >
          Tue
        </li>
        <li
          className="jsx-1635075834 weekdays__item"
        >
          Wed
        </li>
        <li
          className="jsx-1635075834 weekdays__item"
        >
          Thu
        </li>
        <li
          className="jsx-1635075834 weekdays__item"
        >
          Fri
        </li>
        <li
          className="jsx-1635075834 weekdays__item"
        >
          Sat
        </li>
      </ul>
    </div>
    <ul
      className="jsx-3270423735 month"
    >
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--disabled day--date--2018-04-01"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            1
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--disabled day--date--2018-04-02"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            2
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--selected--without-events day--date--2018-04-03"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            3
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-04"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            4
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-05"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            5
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-06"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            6
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-07"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            7
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-08"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            8
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-09"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            9
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-10"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            10
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-11"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            11
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-12"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            12
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-13"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            13
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-14"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            14
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-15"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            15
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-16"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            16
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-17"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            17
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-18"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            18
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-19"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            19
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-20"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            20
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-21"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            21
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-22"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            22
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-23"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            23
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-24"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            24
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-25"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            25
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-26"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            26
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-27"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            27
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-28"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            28
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-29"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            29
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-04-30"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            30
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-05-01"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            1
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-05-02"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            2
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--date--2018-05-03"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            3
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--disabled day--date--2018-05-04"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            4
          </span>
        </button>
      </li>
      <li
        className="jsx-3270423735"
      >
        <button
          className="jsx-2438573792 day day--disabled day--date--2018-05-05"
          onClick={[Function]}
          type="button"
        >
          <span
            className="jsx-2438573792 day__border"
          >
            5
          </span>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Card simple card 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-3439448312 card"
    style={
      Object {
        "padding": "50px",
        "width": "200px",
      }
    }
  >
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos libero deserunt soluta.
  </div>
</div>
`;

exports[`Storyshots CardPicker simple card picker 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="jsx-2134820726 card-picker"
  >
    <label
      className="jsx-2134820726 content-label"
      htmlFor="male"
    >
      <div
        className="jsx-2134820726 card active"
      >
        <input
          checked={true}
          className="jsx-2134820726"
          id="male"
          name="male"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="male"
        />
        <img
          alt=""
          className="jsx-2134820726"
          src="http://via.placeholder.com/240x240"
        />
        <p
          className="jsx-2134820726 content"
        >
          Male
        </p>
      </div>
    </label>
    <label
      className="jsx-2134820726 content-label"
      htmlFor="any"
    >
      <div
        className="jsx-2134820726 card"
      >
        <input
          checked={false}
          className="jsx-2134820726"
          id="any"
          name="any"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="any"
        />
        <img
          alt=""
          className="jsx-2134820726"
          src="http://via.placeholder.com/240x240"
        />
        <p
          className="jsx-2134820726 content"
        >
          Any
        </p>
      </div>
    </label>
    <label
      className="jsx-2134820726 content-label"
      htmlFor="female"
    >
      <div
        className="jsx-2134820726 card"
      >
        <input
          checked={false}
          className="jsx-2134820726"
          id="female"
          name="female"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
          value="female"
        />
        <img
          alt=""
          className="jsx-2134820726"
          src="http://via.placeholder.com/240x240"
        />
        <p
          className="jsx-2134820726 content"
        >
          Female
        </p>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Datepicker Datepicker 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="datepicker-block"
  >
    <label
      htmlFor="datepicker"
    >
      Datepicker
    </label>
    <div>
      <div
        className="react-datepicker-wrapper"
      >
        <div
          className="react-datepicker__input-container"
        >
          <input
            autoComplete={undefined}
            autoFocus={undefined}
            className="datepicker"
            disabled={false}
            id="datepicker"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder={undefined}
            readOnly={undefined}
            required={undefined}
            tabIndex={undefined}
            title={undefined}
            type="text"
            value="03 Apr, 2018"
          />
        </div>
      </div>
    </div>
    
    <style>
      .datepicker-block{position:relative;}
    </style>
    <style>
      .datepicker-block .calendar{background-color:#ffffff;border:none;border-radius:6px;box-shadow:0 2px 40px 0 rgba(0,0,0,0.05);}
      .datepicker-block .calendar .react-datepicker__header{border:none;background-color:#ffffff;}
      .datepicker-block .calendar .react-datepicker__month{margin-top:0;}
      .datepicker-block .calendar .react-datepicker__month-container{padding:10px 20px 20px 20px;}
      .datepicker-block .calendar .react-datepicker__current-month{font-size:1rem;margin-bottom:20px;}
      .datepicker-block .calendar .react-datepicker__triangle{position:absolute;top:0 !important;left:36px !important;width:0;height:0;margin:0 !important;-webkit-transform-origin:0 0;-ms-transform-origin:0 0;transform-origin:0 0;-webkit-transform:rotate(135deg);-ms-transform:rotate(135deg);transform:rotate(135deg);box-sizing:border-box !important;box-shadow:-4px 4px 14px 0 rgba(0,0,0,0.05) !important;border-width:6px !important;border-style:solid !important;border-color:transparent transparent #ffffff #ffffff !important;}
      .datepicker-block .calendar .react-datepicker__triangle:before{content:none !important;}
      .datepicker-block .calendar .react-datepicker__navigation{border:none;top:17px;}
      .datepicker-block .calendar .react-datepicker__navigation:before{content:'';display:block;width:24px;height:24px;position:absolute;left:-39px;color:#222328;background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' version='1.1' viewBox='0 0 24 24' width='24px' height='24px' role='img' class='grommetux-control-icon grommetux-control-icon-form-next grommetux-control-icon--responsive' aria-label='form-next'%3E%3Cpolyline fill='none' stroke='%23000' stroke-width='2' points='9 6 15 12 9 18'%3E%3C/polyline%3E%3C/svg%3E");background-repeat:no-repeat;font-weight:bold;font-size:1.3rem;}
      .datepicker-block .calendar .react-datepicker__navigation--next{right:16px;}
      .datepicker-block .calendar .react-datepicker__navigation--previous{left:16px;}
      .datepicker-block .calendar .react-datepicker__navigation--previous:before{-webkit-transform:rotate(180deg);-ms-transform:rotate(180deg);transform:rotate(180deg);left:18px;}
      .datepicker-block .calendar .react-datepicker__day{margin:6px;border-radius:50%;width:24px;height:24px;line-height:24px;color:#2A2A30;font-size:0.75rem;font-weight:400;}
      .datepicker-block .calendar .react-datepicker__day:hover:not(.react-datepicker__day--selected){color:#2A2A30;background-color:#eff0f4;}
      .datepicker-block .calendar .react-datepicker__day--selected{color:#ffffff;background-color:#0c97f9;}
      .datepicker-block .calendar .react-datepicker__day--outside-month{color:#bbbccd;}
      .datepicker-block .calendar .react-datepicker__day-name{margin:0 6px;color:#bbbccd;width:24px;height:24px;line-height:24px;text-transform:uppercase;font-size:0.75rem;font-weight:400;}
    </style>
    <style>
      .datepicker-block .datepicker{width:100%;padding:12px 16px 12px 52px;color:#2A2A30;font-size:0.875rem;box-sizing:border-box;background-color:#ffffff;background-repeat:no-repeat;background-position:17px center;background-image:url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg width='19px' height='20px' viewBox='0 0 19 20' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3C!-- Generator: Sketch 48 %2847235%29 - http://www.bohemiancoding.com/sketch --%3E%3Ctitle%3Ecalendar%3C/title%3E%3Cdesc%3ECreated with Sketch.%3C/desc%3E%3Cdefs%3E%3Cpath d='M4,4 C3.44771525,4 3,4.44771525 3,5 L3,17 C3,17.5522847 3.44771525,18 4,18 L17,18 C17.5522847,18 18,17.5522847 18,17 L18,5 C18,4.44771525 17.5522847,4 17,4 L4,4 Z M4,2 L17,2 C18.6568542,2 20,3.34314575 20,5 L20,17 C20,18.6568542 18.6568542,20 17,20 L4,20 C2.34314575,20 1,18.6568542 1,17 L1,5 C1,3.34314575 2.34314575,2 4,2 Z M3,7 L18,7 L18,9 L3,9 L3,7 Z M6,0.5 L6,0.5 C6.55228475,0.5 7,0.94771525 7,1.5 L7,5 C7,5.55228475 6.55228475,6 6,6 L6,6 C5.44771525,6 5,5.55228475 5,5 L5,1.5 C5,0.94771525 5.44771525,0.5 6,0.5 Z M15,0.5 L15,0.5 C15.5522847,0.5 16,0.94771525 16,1.5 L16,5 C16,5.55228475 15.5522847,6 15,6 L15,6 C14.4477153,6 14,5.55228475 14,5 L14,1.5 C14,0.94771525 14.4477153,0.5 15,0.5 Z M15.25,13 C15.9403559,13 16.5,12.4403559 16.5,11.75 C16.5,11.0596441 15.9403559,10.5 15.25,10.5 C14.5596441,10.5 14,11.0596441 14,11.75 C14,12.4403559 14.5596441,13 15.25,13 Z M15.25,16.8000002 C15.9403559,16.8000002 16.5,16.2403561 16.5,15.5500002 C16.5,14.8596443 15.9403559,14.3000002 15.25,14.3000002 C14.5596441,14.3000002 14,14.8596443 14,15.5500002 C14,16.2403561 14.5596441,16.8000002 15.25,16.8000002 Z M10.5500002,13 C11.2403561,13 11.8000002,12.4403559 11.8000002,11.75 C11.8000002,11.0596441 11.2403561,10.5 10.5500002,10.5 C9.85964425,10.5 9.30000019,11.0596441 9.30000019,11.75 C9.30000019,12.4403559 9.85964425,13 10.5500002,13 Z M10.5500002,16.8000002 C11.2403561,16.8000002 11.8000002,16.2403561 11.8000002,15.5500002 C11.8000002,14.8596443 11.2403561,14.3000002 10.5500002,14.3000002 C9.85964425,14.3000002 9.30000019,14.8596443 9.30000019,15.5500002 C9.30000019,16.2403561 9.85964425,16.8000002 10.5500002,16.8000002 Z M5.75,13 C6.44035594,13 7,12.4403559 7,11.75 C7,11.0596441 6.44035594,10.5 5.75,10.5 C5.05964406,10.5 4.5,11.0596441 4.5,11.75 C4.5,12.4403559 5.05964406,13 5.75,13 Z M5.75,16.8000002 C6.44035594,16.8000002 7,16.2403561 7,15.5500002 C7,14.8596443 6.44035594,14.3000002 5.75,14.3000002 C5.05964406,14.3000002 4.5,14.8596443 4.5,15.5500002 C4.5,16.2403561 5.05964406,16.8000002 5.75,16.8000002 Z' id='path-1'%3E%3C/path%3E%3C/defs%3E%3Cg id='Icons/Calendar' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd' transform='translate%28-1.000000, 0.000000%29'%3E%3Cg id='icon'%3E%3Cmask id='mask-2' fill='white'%3E%3Cuse xlink:href='%23path-1'%3E%3C/use%3E%3C/mask%3E%3Cuse id='calendar' fill='%23cccccc' fill-rule='nonzero' xlink:href='%23path-1'%3E%3C/use%3E%3C/g%3E%3C/g%3E%3C/svg%3E");border-width:2px;border-style:solid;border-color:#E7E7F0;border-radius:4px;}
      .datepicker-block .datepicker:focus{outline:none;border-color:#0c97f9;}
      .datepicker-block.has-error .datepicker,.datepicker-block.has-error .datepicker:focus{border-color:#FF5572;}
    </style>
    <style>
      .datepicker-block label{color:#2A2A30;display:block;margin-bottom:6px;font-weight:500;font-size:1rem;}
    </style>
    <style>
      .datepicker-block .react-datepicker-wrapper,.datepicker-block .react-datepicker__input-container{width:100%;}
    </style>
    <style>
      .datepicker-block .input-error{position:absolute;left:4px;width:auto;max-width:100%;box-sizing:border-box;word-wrap:break-word;padding:12px 16px;margin-top:-6px;border-radius:3px;background-color:#ffffff;box-shadow:0 2px 14px 0 rgba(0,0,0,0.14);color:#FF5572;font-size:0.875rem;font-weight:500;}
      .datepicker-block .input-error:before{content:'';position:absolute;top:0;left:32px;width:0;height:0;-webkit-transform-origin:0 0;-ms-transform-origin:0 0;transform-origin:0 0;-webkit-transform:rotate(135deg);-ms-transform:rotate(135deg);transform:rotate(135deg);box-sizing:border-box;box-shadow:-4px 4px 14px 0 rgba(0,0,0,0.05);border-width:6px;border-style:solid;border-color:transparent transparent #ffffff #ffffff;}
    </style>
  </div>
</div>
`;

exports[`Storyshots FileInput simple file input 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <input
    className="jsx-1181367161 inputFile"
    id="text-input"
    name="name"
    onChange={[Function]}
    type="file"
  />
  <label
    className="jsx-1181367161 upload-license-copy"
    htmlFor="text-input"
  >
    <svg
      className="jsx-1181367161 icon-upload"
      fill="#4695ef"
      height="17"
      viewBox="0 0 20 17"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className="jsx-1181367161"
        d="M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z"
      />
    </svg>
    <span
      className="jsx-1181367161"
    >
      Upload license
    </span>
  </label>
</div>
`;

exports[`Storyshots Modal default 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <button
    className="button"
    onClick={[Function]}
    style={Object {}}
  >
    Open modal
    <style>
      .button{padding:13px 54px;height:52px;background-color:#0c97f9;box-sizing:border-box;cursor:pointer;color:#ffffff;line-height:26px;border-width:1px;border-style:solid;border-color:#0c97f9;border-radius:26px;font-style:normal;font-weight:500;font-size:1rem;text-align:center;text-transform:uppercase;}
      .button--accent{color:#0c97f9;background-color:#ffffff;border-color:#ffffff;}
      .button--danger{color:#ffffff;background-color:#ea6577;border-color:#ea6577;}
      .button--rounded{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;padding:0;border-radius:50%;}
      .button--squared{border-radius:12px;}
      .button--transparent{background-color:transparent;box-shadow:0px 0px 10px rgba(12,151,249,0.15);color:#2A2A30;}
      .button svg{fill:#ffffff;stroke:#ffffff;}
    </style>
    <style />
  </button>
</div>
`;

exports[`Storyshots TextInput Text input 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <form>
    <div
      className="jsx-1685083184 jsx-1043162979 form-field"
    >
      <label
        className="jsx-1685083184 jsx-1043162979"
        htmlFor="text-input"
      >
        Text input
      </label>
      <input
        className="jsx-3846816657 "
        id="text-input"
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="text input"
        type="text"
        value=""
      />
      <style>
        input,textarea{width:100%;min-width:100%;max-width:100%;min-height:44px;padding:12px 16px;background-color:#ffffff;color:#2A2A30;box-sizing:border-box;font-style:normal;font-weight:normal;font-size:0.875rem;border-width:2px;border-style:solid;border-color:#E7E7F0;border-radius:4px;}
        input::-webkit-input-placeholder,textarea::-webkit-input-placeholder{color:#828393;}
        input::-moz-placeholder,textarea::-moz-placeholder{color:#828393;}
        input:-ms-input-placeholder,textarea:-ms-input-placeholder{color:#828393;}
        input:-moz-placeholder,textarea:-moz-placeholder{color:#828393;}
        input:focus,textarea:focus{outline:none;padding:12px 16px;border-color:#0c97f9;}
        input.invalid,input.invalid:focus,textarea.invalid,textarea.invalid:focus{border-color:#FF5572;}
      </style>
    </div>
  </form>
</div>
`;

exports[`Storyshots Toast Default toast 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div>
    <button
      onClick={[Function]}
      style={
        Object {
          "marginBottom": 20,
        }
      }
    >
      Show Toast
    </button>
  </div>
</div>
`;

exports[`Storyshots Toast Primary toast 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div>
    <button
      onClick={[Function]}
      style={
        Object {
          "marginBottom": 20,
        }
      }
    >
      Show Toast
    </button>
  </div>
</div>
`;
